# embedded

./: .gitignore  LICENSE  README.md  brain.py  serial_plotter.py
JetsonNano/: UART_echo.py
JetsonNano/devel/: .catkin  local_setup.sh  setup.sh
JetsonNano/msg/: ControllerCommands.msg  SensorData.msg
JetsonNano/src/: README.md  UART_echo.py
JetsonNano/src/customized_msgs/: CMakeLists.txt  Notes.md  package.xml
JetsonNano/src/customized_msgs/msg/: SensorData.msg  cmd.msg
JetsonNano/src/jetson_nano/: CMakeLists.txt  package.xml
JetsonNano/src/localization/: .gitignore  CMakeLists.txt  package.xml
JetsonNano/src/localization/cmake/: OpenCV.cmake  PCL.cmake  ncurse.cmake
JetsonNano/src/localization/include/: ball_estimator.hpp  d435i_lin_vel_estimator.hpp  fwd_pid.hpp  localization_flow.h  pid.hpp
JetsonNano/src/localization/include/global_definition/: global_definition.h.in
JetsonNano/src/localization/include/publisher/: arrow_publisher.hpp  cloud_publisher.hpp  pose_publisher.hpp  tf_broadcaster.hpp  twist_publisher.hpp
JetsonNano/src/localization/include/sensor_data/: cloud_data.hpp  dual_img_stamped.hpp
JetsonNano/src/localization/include/subscriber/: cloud_subscriber.hpp  dual_img_subscriber.hpp  esp32_subscriber.hpp  img_saver.hpp  img_subscriber.hpp  imu_subscriber.hpp  tf_listener.hpp
JetsonNano/src/localization/include/tools/: tic_toc.hpp
JetsonNano/src/localization/launch/: img_save.launch  localization.launch
JetsonNano/src/localization/node/: img_save.cpp  localization_node.cpp
JetsonNano/src/localization/rviz/: d435i_and_t265.rviz
JetsonNano/src/localization/src/: localization_flow.cpp
JetsonNano/src/localization/src/publisher/: pose_publisher.cpp
JetsonNano/src/localization/src/subscriber/: cloud_subscriber.cpp  dual_img_subscriber.cpp  img_saver.cpp  img_subscriber.cpp
arduino/bluetooth_test/: platformio.ini
arduino/bluetooth_test/src/: main.cpp
arduino/double_pid_control/: platformio.ini
arduino/double_pid_control_v2/: dualPIDV2.ino
arduino/full_pid_bluetooth/: .full_pid_bluetooth.ino.swp  full_pid_bluetooth.ino  platformio.ini
arduino/motor_test/: platformio.ini
bluetooth/: .controller.py.swp  README.md  controller.py  requirements.txt
chickenbot_pid_test/: platformio.ini
chickenbot_pid_test/src/: main.cpp
double_pid_control/src/: main.cpp
launch_check/: rs_d435i_and_t265.launch
metrobot/: metrobot.ino
(+35 files in other folders)
